deploy: 901a06f07df0e82fae21b1898ca44cf541d147b4

--- a/genindex.html
+++ b/genindex.html
@@ -35,8 +35,59 @@
 <h1 id="index">Index</h1>
 
 <div class="genindex-jumpbox">
+ <a href="#A"><strong>A</strong></a>
+ | <a href="#C"><strong>C</strong></a>
+ | <a href="#D"><strong>D</strong></a>
+ | <a href="#I"><strong>I</strong></a>
+ | <a href="#M"><strong>M</strong></a>
  
 </div>
+<h2 id="A">A</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="index.html#complexifier.add_nulls">add_nulls() (in module complexifier)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="index.html#complexifier.add_or_subtract_outliers">add_or_subtract_outliers() (in module complexifier)</a>
+</li>
+      <li><a href="index.html#complexifier.add_standard_deviations">add_standard_deviations() (in module complexifier)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="C">C</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="index.html#complexifier.create_spag_error">create_spag_error() (in module complexifier)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="D">D</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="index.html#complexifier.duplicate_rows">duplicate_rows() (in module complexifier)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="I">I</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="index.html#complexifier.introduce_spag_error">introduce_spag_error() (in module complexifier)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="M">M</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="index.html#complexifier.mess_it_up">mess_it_up() (in module complexifier)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 
 
           </div>
